# launchpad-fun

./: .gitignore  Anchor.toml  Makefile  package.json  tsconfig.json
programs/launchpad-fun/: Cargo.toml
programs/launchpad-fun/src/: constants.rs  errors.rs  events.rs  lib.rs  math.rs  statuses.rs
programs/launchpad-fun/src/instructions/: mod.rs
programs/launchpad-fun/src/instructions/admin/: init_launch_pad_config.rs  mod.rs
programs/launchpad-fun/src/instructions/creator/: create_launch_pad_token.rs  create_token.rs  mod.rs
programs/launchpad-fun/src/instructions/investor/: buy_token.rs  mod.rs  sell_token.rs
programs/launchpad-fun/src/instructions/token/: graduate_to_raydium.rs  mod.rs
programs/launchpad-fun/src/state/: constants.rs  launch_pad_config.rs  launch_pad_token.rs  mod.rs
scripts/: generate-clients.ts
tests/: init_launch_pad_config.test.ts  launch_pad.test.ts  launchpad-fun.ts
tests/fixtures/: cpmm_amm_config_devnet.json  cpmm_amm_config_mainnet.json  cpmm_fee_rcv_devnet.json  cpmm_fee_rcv_mainnet.json
