[package]
name = "launchpad-fun"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "launchpad_fun"

[features]
default = []
cpi = ["no-entrypoint"]
devnet = ["raydium-cpmm-cpi/devnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = [] }
spl-token-metadata-interface = "0.8.0"
spl-type-length-value = "0.9.0"
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
solana-pubkey = "3.0.0"
base64ct = { version = "1.7.3", features = [] }
raydium-cpmm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-cpmm-cpi", features = ["cpi", "devnet"] }
